--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.0.6"
+pillow = "^10.3.0"
+ipython = "^8.24.0"
+black = "^24.4.2"
+psycopg-binary = "^3.1.19"
 
 
 [build-system]
