--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ ipython = "^8.24.0"
 black = "^24.4.2"
 psycopg-binary = "^3.1.19"
 psycopg = "^3.1.19"
+django-apscheduler = "^0.6.2"
 
 
 [build-system]
