--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ black = "^24.4.2"
 psycopg-binary = "^3.1.19"
 psycopg = "^3.1.19"
 django-apscheduler = "^0.6.2"
+pytils = "^0.4.1"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
